--- a/mt_notebooks/read_instances.ipynb
+++ b/mt_notebooks/read_instances.ipynb
@@ -29,10 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module_path = os.path.abspath(os.path.join('../'))\n",
-    "\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)"
+    "sys.path.append(\\\"../\\\")"
    ]
   },
   {
