--- a/mt_notebooks/text_coloring.ipynb
+++ b/mt_notebooks/text_coloring.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "import dill\n",
     "import numpy as np\n",
-    "from typing import List, Tuple, Dict, Any"
+    "from typing import List, Tuple"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xbert import InputInstance, Config\n",
+    "from xbert import InputInstance\n",
     "from segtok.tokenizer import web_tokenizer"
    ]
   },
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = \"/raid/calt/xbert/\"\n",
+    "RESULTS_DIR = \"../results/\"\n",
     "DATASET_DIR = \"../data/glue_data/\"\n",
     "\n",
     "STRATEGY_NAME_MAPPING = {\n",
@@ -195,14 +195,14 @@
       "  \\centering\n",
       "  \\begin{tabular}{l|l|l}\n",
       "    method&relevances&maximum value \\\\ \\hline\n",
-      "    grad&\\colorbox[RGB]{106,106,255}{\\strut forced} \\colorbox[RGB]{255,232,232}{\\strut ,} \\colorbox[RGB]{240,240,255}{\\strut familiar} \\colorbox[RGB]{255,163,163}{\\strut and} \\colorbox[RGB]{255,255,255}{\\strut thoroughly} \\colorbox[RGB]{0,0,255}{\\strut condescending} \\colorbox[RGB]{255,220,220}{\\strut .} &3.2e-10\\\\\n",
-      "    gradxinput&\\colorbox[RGB]{114,114,255}{\\strut forced} \\colorbox[RGB]{255,115,115}{\\strut ,} \\colorbox[RGB]{255,251,251}{\\strut familiar} \\colorbox[RGB]{255,155,155}{\\strut and} \\colorbox[RGB]{255,36,36}{\\strut thoroughly} \\colorbox[RGB]{0,0,255}{\\strut condescending} \\colorbox[RGB]{255,126,126}{\\strut .} &0.00011\\\\\n",
-      "    saliency&\\colorbox[RGB]{255,128,128}{\\strut forced} \\colorbox[RGB]{255,196,196}{\\strut ,} \\colorbox[RGB]{255,172,172}{\\strut familiar} \\colorbox[RGB]{255,196,196}{\\strut and} \\colorbox[RGB]{255,159,159}{\\strut thoroughly} \\colorbox[RGB]{255,0,0}{\\strut condescending} \\colorbox[RGB]{255,205,205}{\\strut .} &0.025\\\\\n",
-      "    integratedgrad&\\colorbox[RGB]{255,251,251}{\\strut forced} \\colorbox[RGB]{240,240,255}{\\strut ,} \\colorbox[RGB]{255,208,208}{\\strut familiar} \\colorbox[RGB]{241,241,255}{\\strut and} \\colorbox[RGB]{216,216,255}{\\strut thoroughly} \\colorbox[RGB]{255,0,0}{\\strut condescending} \\colorbox[RGB]{255,238,238}{\\strut .} &0.68\\\\\n",
-      "    unk&\\colorbox[RGB]{254,254,255}{\\strut forced} \\colorbox[RGB]{254,254,255}{\\strut ,} \\colorbox[RGB]{254,254,255}{\\strut familiar} \\colorbox[RGB]{254,254,255}{\\strut and} \\colorbox[RGB]{255,252,252}{\\strut thoroughly} \\colorbox[RGB]{255,0,0}{\\strut condescending} \\colorbox[RGB]{255,254,254}{\\strut .} &0.35\\\\\n",
-      "    resampling&\\colorbox[RGB]{255,133,133}{\\strut forced} \\colorbox[RGB]{254,254,255}{\\strut ,} \\colorbox[RGB]{255,238,238}{\\strut familiar} \\colorbox[RGB]{254,254,255}{\\strut and} \\colorbox[RGB]{255,224,224}{\\strut thoroughly} \\colorbox[RGB]{255,0,0}{\\strut condescending} \\colorbox[RGB]{254,254,255}{\\strut .} &0.76\\\\\n",
-      "    resampling_std&\\colorbox[RGB]{255,0,0}{\\strut forced} \\colorbox[RGB]{255,254,254}{\\strut ,} \\colorbox[RGB]{255,136,136}{\\strut familiar} \\colorbox[RGB]{255,254,254}{\\strut and} \\colorbox[RGB]{255,98,98}{\\strut thoroughly} \\colorbox[RGB]{255,27,27}{\\strut condescending} \\colorbox[RGB]{255,254,254}{\\strut .} &0.47\\\\\n",
-      "    delete&\\colorbox[RGB]{254,254,255}{\\strut forced} \\colorbox[RGB]{254,254,255}{\\strut ,} \\colorbox[RGB]{254,254,255}{\\strut familiar} \\colorbox[RGB]{254,254,255}{\\strut and} \\colorbox[RGB]{254,254,255}{\\strut thoroughly} \\colorbox[RGB]{255,0,0}{\\strut condescending} \\colorbox[RGB]{254,254,255}{\\strut .} &1\\\\\n",
+      "    delete&\\colorbox[RGB]{255,0,0}{\\strut good} \\colorbox[RGB]{255,235,235}{\\strut film} \\colorbox[RGB]{255,253,253}{\\strut ,} \\colorbox[RGB]{250,250,255}{\\strut but} \\colorbox[RGB]{255,250,250}{\\strut very} \\colorbox[RGB]{250,250,255}{\\strut glum} \\colorbox[RGB]{251,251,255}{\\strut .} &0.98\\\\\n",
+      "    grad&\\colorbox[RGB]{255,160,160}{\\strut good} \\colorbox[RGB]{255,210,210}{\\strut film} \\colorbox[RGB]{187,187,255}{\\strut ,} \\colorbox[RGB]{166,166,255}{\\strut but} \\colorbox[RGB]{255,130,130}{\\strut very} \\colorbox[RGB]{255,0,0}{\\strut glum} \\colorbox[RGB]{232,232,255}{\\strut .} &3.4e-07\\\\\n",
+      "    gradxinput&\\colorbox[RGB]{255,31,31}{\\strut good} \\colorbox[RGB]{255,0,0}{\\strut film} \\colorbox[RGB]{255,5,5}{\\strut ,} \\colorbox[RGB]{214,214,255}{\\strut but} \\colorbox[RGB]{27,27,255}{\\strut very} \\colorbox[RGB]{101,101,255}{\\strut glum} \\colorbox[RGB]{255,236,236}{\\strut .} &0.041\\\\\n",
+      "    integratedgrad&\\colorbox[RGB]{255,135,135}{\\strut good} \\colorbox[RGB]{255,229,229}{\\strut film} \\colorbox[RGB]{255,200,200}{\\strut ,} \\colorbox[RGB]{251,251,255}{\\strut but} \\colorbox[RGB]{214,214,255}{\\strut very} \\colorbox[RGB]{0,0,255}{\\strut glum} \\colorbox[RGB]{255,224,224}{\\strut .} &0.96\\\\\n",
+      "    resampling&\\colorbox[RGB]{255,91,91}{\\strut good} \\colorbox[RGB]{255,0,0}{\\strut film} \\colorbox[RGB]{255,221,221}{\\strut ,} \\colorbox[RGB]{253,253,255}{\\strut but} \\colorbox[RGB]{255,190,190}{\\strut very} \\colorbox[RGB]{255,90,90}{\\strut glum} \\colorbox[RGB]{255,254,254}{\\strut .} &0.57\\\\\n",
+      "    resampling_std&\\colorbox[RGB]{255,43,43}{\\strut good} \\colorbox[RGB]{255,26,26}{\\strut film} \\colorbox[RGB]{255,127,127}{\\strut ,} \\colorbox[RGB]{255,251,251}{\\strut but} \\colorbox[RGB]{255,89,89}{\\strut very} \\colorbox[RGB]{255,0,0}{\\strut glum} \\colorbox[RGB]{255,255,255}{\\strut .} &0.48\\\\\n",
+      "    saliency&\\colorbox[RGB]{255,184,184}{\\strut good} \\colorbox[RGB]{255,160,160}{\\strut film} \\colorbox[RGB]{255,202,202}{\\strut ,} \\colorbox[RGB]{255,186,186}{\\strut but} \\colorbox[RGB]{255,190,190}{\\strut very} \\colorbox[RGB]{255,0,0}{\\strut glum} \\colorbox[RGB]{255,211,211}{\\strut .} &35\\\\\n",
+      "    unk&\\colorbox[RGB]{255,0,0}{\\strut good} \\colorbox[RGB]{255,158,158}{\\strut film} \\colorbox[RGB]{255,229,229}{\\strut ,} \\colorbox[RGB]{250,250,255}{\\strut but} \\colorbox[RGB]{250,250,255}{\\strut very} \\colorbox[RGB]{250,250,255}{\\strut glum} \\colorbox[RGB]{250,250,255}{\\strut .} &0.98\\\\\n",
       "  \\end{tabular}\n",
       "  \\caption{Example explanations for SST-2}\n",
       "  \\label{tab:example_explanations}\n",
@@ -211,15 +211,15 @@
     }
    ],
    "source": [
-    "print(colored_text_to_table(sst2_experiment_relevances, input_instances, 137))"
+    "print(colored_text_to_table(sst2_experiment_relevances, input_instances, 667))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:xbert]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-xbert-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
