refactored code into mt_codebase and mt_notebooks

--- a/mt_notebooks/example_correlation_unused.ipynb
+++ b/mt_notebooks/example_correlation_unused.ipynb
@@ -17,8 +17,9 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "from collections import defaultdict\n",
-    "import numpy as np"
+    "import dill\n",
+    "\n",
+    "sys.path.append(\"../\")"
    ]
   },
   {
@@ -27,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append(\"../\")"
+    "from mt_codebase.util import calculate_correlation"
    ]
   },
   {
@@ -36,33 +37,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_correlation(relevance_dict_1, relevance_dict2):\n",
-    "    zipped_value_list = []\n",
-    "    for word_key, relevance in relevance_dict_1.items():\n",
-    "        zipped_value_list.append([relevance, relevance_dict2[word_key]])\n",
-    "    return np.corrcoef(np.array(zipped_value_list), rowvar=False)[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dill as pickle\n",
     "with open('../results/sst2/resampling/relevances.pkl', 'rb') as file:\n",
-    "    olm = pickle.load(file)"
+    "    olm = dill.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dill as pickle\n",
     "with open('../results/sst2/resampling_std/relevances.pkl', 'rb') as file:\n",
-    "    olms = pickle.load(file)"
+    "    olms = dill.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../results/sst2/unk/relevances.pkl', 'rb') as file:\n",
+    "    unk = dill.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../results/sst2/delete/relevances.pkl', 'rb') as file:\n",
+    "    de = dill.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../results/sst2/saliency/relevances.pkl', 'rb') as file:\n",
+    "    sal = dill.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../results/sst2/gradxinput/relevances.pkl', 'rb') as file:\n",
+    "    gi = dill.load(file)"
    ]
   },
   {
@@ -71,53 +97,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../results/sst2/unk/relevances.pkl', 'rb') as file:\n",
-    "    unk = pickle.load(file)"
+    "with open('../results/sst2/integratedgrad/relevances.pkl', 'rb') as file:\n",
+    "    ig = dill.load(file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../results/sst2/delete/relevances.pkl', 'rb') as file:\n",
-    "    de = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../results/sst2/grad/relevances.pkl', 'rb') as file:\n",
-    "    grad = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../results/sst2/gradxinput/relevances.pkl', 'rb') as file:\n",
-    "    gi = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../results/sst2/integratedgrad/relevances.pkl', 'rb') as file:\n",
-    "    ig = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +249,7 @@
        " 868: 0.5702757731177039}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +276,7 @@
        "             ('sent', 6): 3.5762786865234375e-07})"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +303,7 @@
        "             ('sent', 6): 0.0})"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,16 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8691523738664307"
+       "0.8691523738664308"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5441912388729032"
+       "0.5441912388729031"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +363,7 @@
        "0.3585199414453237"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,90 +374,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5811677993612608"
+       "0.47071292625404637"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_correlation(olm[667], grad[667])"
+    "calculate_correlation(olm[667], sal[667])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "calculate_correlation(olms[667], grad[667])"
-   ],
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "calculate_correlation(olm[667], gi[667])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "calculate_correlation(olm[667], ig[667])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7741117296243906"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculate_correlation(olm[667], ig[667])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   },
    "outputs": [
     {
      "data": {
@@ -479,7 +407,7 @@
        "0.32664634238883805"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,8 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -499,7 +431,7 @@
        "-0.14021700427818695"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,13 +439,37 @@
    "source": [
     "calculate_correlation(olm[667], ig[667])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5930250621579309"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_correlation(olms[667], sal[667])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:occlusion]",
+   "display_name": "Python [conda env:xbert]",
    "language": "python",
-   "name": "conda-env-occlusion-py"
+   "name": "conda-env-xbert-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -525,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
