--- a/mt_notebooks/text_coloring.ipynb
+++ b/mt_notebooks/text_coloring.ipynb
@@ -17,6 +17,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append(\"../\")\n",
     "sys.path.append(\"../experiments/\")"
    ]
@@ -27,12 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import dill\n",
-    "import numpy as np\n",
-    "from typing import List, Tuple"
+    "from experiments.sst2 import read_sst2_dataset, dataset_to_input_instances\n",
+    "from mt_codebase.latex_util import colored_text_to_table\n",
+    "from mt_codebase.load_relevances import experiment_load_relevances"
    ]
   },
   {
@@ -41,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xbert import InputInstance\n",
-    "from segtok.tokenizer import web_tokenizer"
+    "results_dir = \"../results/sst2\"\n",
+    "sst2_data_path = \"../data/glue_data/SST-2/dev.tsv\""
    ]
   },
   {
@@ -51,140 +49,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = \"../results/\"\n",
-    "DATASET_DIR = \"../data/glue_data/\"\n",
-    "\n",
-    "STRATEGY_NAME_MAPPING = {\n",
-    "    \"unk\": \"Unk\",\n",
-    "    \"delete\": \"Delete\",\n",
-    "    \"resampling\": \"OLM\",\n",
-    "    \"resampling_std\": \"OLM-S\",\n",
-    "    \"grad\": \"Grad.\",\n",
-    "    \"gradxinput\": \"Grad*Input\",\n",
-    "    \"saliency\": \"Sensitivity\",\n",
-    "    \"integratedgrad\": \"Integr. grad\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def experiment_load_relevances(experiment_dir: str,\n",
-    "                               relevance_filename: str = \"relevances.pkl\"):\n",
-    "    path = Path(experiment_dir)\n",
-    "    \n",
-    "    experiment_relevances = {}\n",
-    "    for relevance_file in path.glob(f\"**/{relevance_filename}\"):\n",
-    "        name = relevance_file.parents[0].name\n",
-    "        with relevance_file.open(\"rb\") as f:\n",
-    "            relevances = dill.load(f)\n",
-    "            experiment_relevances[name] = relevances\n",
-    "            \n",
-    "    return experiment_relevances"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SST2_RESULTS_PATH = os.path.join(RESULTS_DIR, \"sst2\")\n",
-    "SST2_DATA_PATH = os.path.join(DATASET_DIR, \"SST-2/dev.tsv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sst2_experiment_relevances = experiment_load_relevances(SST2_RESULTS_PATH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_sst2_dataset(path: str) -> List[Tuple[List[str], str]]:\n",
-    "    dataset = []\n",
-    "    with open(path) as fin:\n",
-    "        fin.readline()\n",
-    "        for index, line in enumerate(fin):\n",
-    "            tokens = line.strip().split('\\t')\n",
-    "            sent, target = tokens[0], tokens[1]\n",
-    "            dataset.append((sent, target))\n",
-    "            \n",
-    "    return dataset\n",
-    "\n",
-    "\n",
-    "def dataset_to_input_instances(dataset: List[Tuple[List[str], str]]) -> List[InputInstance]:\n",
-    "    input_instances = []\n",
-    "    for idx, (sent, _) in enumerate(dataset):\n",
-    "        instance = InputInstance(id_=idx, sent=web_tokenizer(sent))\n",
-    "        input_instances.append(instance)\n",
-    "        \n",
-    "    return input_instances"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = read_sst2_dataset(SST2_DATA_PATH)\n",
+    "sst2_experiment_relevances = experiment_load_relevances(results_dir)\n",
+    "dataset = read_sst2_dataset(sst2_data_path)\n",
     "input_instances = dataset_to_input_instances(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def relevance_to_colored_text(relevance_dict, input_instances, method, idx):\n",
-    "    output_text = ''\n",
-    "    \n",
-    "    sentence_relevance_dict = relevance_dict[method][idx]\n",
-    "    sentence_value_list = list(sentence_relevance_dict.values())\n",
-    "    max_value = np.abs(np.array(sentence_value_list)).max()\n",
-    "    normalized_sentence_value_list = sentence_value_list/max_value\n",
-    "\n",
-    "    for word, score in zip(input_instances[idx].token_fields['sent']._tokens, normalized_sentence_value_list):\n",
-    "        red = 255 * min(1, 1+score)\n",
-    "        green = 255 * (1-abs(score))\n",
-    "        blue = 255 * min(1, 1-score)\n",
-    "        output_text += '\\colorbox[RGB]{' + str(int(red)) + ',' + str(int(green)) + ',' + str(int(blue)) + '}{\\strut ' + word + '} '\n",
-    "\n",
-    "    return output_text, max_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def colored_text_to_table(relevance_dict, input_instances, idx):\n",
-    "    table_string_start = [\"\\\\begin{table*}[h]\", \"  \\\\centering\", \"  \\\\begin{tabular}{l|l|l}\", \"    method&relevances&maximum value \\\\\\ \\hline\"]    \n",
-    "    table_string_end = [\"  \\\\end{tabular}\", \"  \\\\caption{Example explanations for SST-2}\", \"  \\\\label{tab:example_explanations}\", \"\\\\end{table*}\"]\n",
-    "    \n",
-    "    for method in relevance_dict.keys():\n",
-    "        text, max_value = relevance_to_colored_text(relevance_dict, input_instances, method, idx)\n",
-    "        table_string_start.append(f\"    {method}&{text}&{'%.2g'%max_value}\\\\\\\\\")\n",
-    "    \n",
-    "    return \"\\n\".join(table_string_start+table_string_end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
