add cola examples

--- a/mt_notebooks/text_coloring.ipynb
+++ b/mt_notebooks/text_coloring.ipynb
@@ -83,7 +83,7 @@
     }
    ],
    "source": [
-    "print(colored_text_to_table(sst2_experiment_relevances, input_instances, 667))"
+    "print(colored_text_to_table(sst2_experiment_relevances[667], input_instances[667]))"
    ]
   }
  ],
