--- a/mt_notebooks/text_coloring-cola.ipynb
+++ b/mt_notebooks/text_coloring-cola.ipynb
@@ -118,6 +118,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([256, 867, 493]), array([992, 234, 207]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "incorrect_examples, correct_examples"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
