refactor read_instances_dict_and_append_label_cola function

--- a/mt_notebooks/relevance_class_significance_test.ipynb
+++ b/mt_notebooks/relevance_class_significance_test.ipynb
@@ -69,9 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_instances_dict_and_append_label_cola(\"../data/glue_data/cola/in_domain_dev.tsv\",\n",
-    "                                          \"../data/glue_data/cola/out_of_domain_dev.tsv\",\n",
-    "                                          instances_dict)"
+    "read_instances_dict_and_append_label_cola(\"../data/glue_data/cola/dev.tsv\", instances_dict)"
    ]
   },
   {
